//
// Copyright 2020 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.examples.trusted_database_init;

import "examples/trusted_database/proto/trusted_database.proto";
import "oak_services/proto/grpc_invocation.proto";
import "oak_services/proto/log.proto";
import "proto/handle.proto";

// Initialization message that should be sent to Router Oak Node and Handler Oak Node.
message TrustedDatabaseInit {
  oak.handle.Sender log_sender = 1 [(oak.handle.message_type) = ".oak.log.LogMessage"];
  // Copy of the database.
  oak.examples.trusted_database.PointOfInterestMap points_of_interest = 2;
}
